--- a/views/agregarUsuario.ejs
+++ b/views/agregarUsuario.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Añadir Usuario</title>
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -94,7 +95,7 @@
             <label for="rol" class="form-label">Rol del usuario</label>
             <select name="rol" id="rol" class="form-select" required>
               <option value="">Selecciona un rol</option>
-              <option value="lector">Normal</option>
+              <option value="lector">Usuario</option>
               <option value="editor">Editor</option>
               <option value="administrador">Administrador</option>
             </select>
@@ -142,6 +143,5 @@
       }
     });
   </script>
-
 </body>
 </html>
